# workshop-02-aovivo

./: README.md  index.html  my_duckdb.db  pyproject.toml
app/: etl.py  ler_duckdb.py  schema.py
docs/: index.md
search/: search_index.json
site/: 404.html  index.html
tests/: test_func_etl.py
